--- a/2024-2025/11-физмат/Регулярные выражение/Задания.md
+++ b/2024-2025/11-физмат/Регулярные выражение/Задания.md
@@ -1,9 +1,12 @@
 #Задания
 
-* 0) Найти все даты в тексте
+* 0 Найти все даты в тексте
 
-* 1) Найти се адреса электронной почты
+* 1 Найти все адреса электронной почты
 
-* 2) Найти все слова начинающиеся с большой буквы, но не начинающие предложение
+* 2 Найти все слова начинающиеся с большой буквы, но не начинающие предложение
 
-* 3) Посчитать количество предложений в файле(английский язык
+* 3 Посчитать количество предложений в файле(английский язык)
+
+* 4 В файле геном_человека.txt посчитать наибольшую последовательность повторяющихся оснований,
+введённую пользователем с клавиатуры
